--- a/spec/dummy/config/puntopagos.yml
+++ b/spec/dummy/config/puntopagos.yml
@@ -1,14 +1,14 @@
 development:
   environment:        "sandbox"
-  puntopagos_key:     "YOUR-API-KEY"
-  puntopagos_secret:  "YOUR-APP-SECRET"
+  puntopagos_key:     "ftRi6ioOfOFVF1aJR68J"
+  puntopagos_secret:  "vEc6TL3tqpeqXI45sP9L3c4ATMwMGHaIvLxRIeZ7"
 
 test:
   environment:        "sandbox"
-  puntopagos_key:     "YOUR-API-KEY"
-  puntopagos_secret:  "YOUR-APP-SECRET"
+  puntopagos_key:     "ftRi6ioOfOFVF1aJR68J"
+  puntopagos_secret:  "vEc6TL3tqpeqXI45sP9L3c4ATMwMGHaIvLxRIeZ7"
 
 production:
-  environment:        "production"
-  puntopagos_key:     "YOUR-API-KEY"
-  puntopagos_secret:  "YOUR-APP-SECRET"
+  environment:        "sandbox"
+  puntopagos_key:     "ftRi6ioOfOFVF1aJR68J"
+  puntopagos_secret:  "vEc6TL3tqpeqXI45sP9L3c4ATMwMGHaIvLxRIeZ7"
